--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "coveralls": "^2.11.9",
     "istanbul": "^0.4.3",
     "mocha": "^2.4.5"
+  },
+  "dependencies": {
+    "asterisk-ami-event-utils": "^1.0.1"
   }
 }
