added support for actions data packages
updated tests
some improvements
updated README
inc version for npm

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "asterisk-ami-events-stream",
+  "version": "1.2.1",
+  "description": "Asterisk AMI Events Stream",
   "version": "1.2.4",
   "description": "Asterisk AMI Events Stream for NodeJS (ES2015)",
   "main": "./lib/AmiEventsStream.js",
